@@ -21,8 +21,6 @@ import net.neoforged.api.distmarker.Dist;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.fml.common.EventBusSubscriber;
 import net.neoforged.fml.event.lifecycle.FMLClientSetupEvent;
-import org.apache.commons.io.IOUtils;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -109,7 +107,7 @@ public class ClientLoader extends Loader {
 
     public static String readGlobalCSS() {
         try (InputStream stream = getResourceStream("global.css")) {
-            if (stream != null) return IOUtils.toString(stream, StandardCharsets.UTF_8);
+            if (stream != null) return new String(stream.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException ignored) {
         }
         return null;
@@ -152,7 +150,7 @@ public class ClientLoader extends Loader {
             try (InputStream stream = entry.getValue().open()) {
                 String path = entry.getKey().getPath();
                 if (path.startsWith("apricity/")) path = path.substring(9);
-                handler.accept(path, IOUtils.toString(stream, StandardCharsets.UTF_8));
+                handler.accept(path, new String(stream.readAllBytes(), StandardCharsets.UTF_8));
             } catch (IOException exception) {
                 exception.printStackTrace();
             }
